# fisha

./: README.md  package.json
contract/: Cargo.toml  README.md
contract/src/: lib.rs
fisha-token/: Cargo.toml  README.md  token-deploy-mainnet.sh  token-deploy-testnet.sh
fisha-token/src/: internal.rs  lib.rs  migrations.rs  storage_nep_145.rs
src/: App.vue  config.js  global.css  main.js  utils.js
src/components/: SignedIn.vue  SignedOut.vue
web/: .firebaserc
web/public/: index.html
web/public/css/: app.4a1a68b1.css  app.e3798d42.css
web/public/js/: app.0604e04c.js  app.0604e04c.js.map  app.27ee932a.js  app.27ee932a.js.map  app.351cefac.js  app.351cefac.js.map  app.3fec7563.js  app.3fec7563.js.map  app.4bb2c68d.js  app.4bb2c68d.js.map  app.5865c642.js  app.5865c642.js.map  app.7c1c03d2.js  app.7c1c03d2.js.map  app.7c68ed8f.js  app.7c68ed8f.js.map  app.7cecce51.js  app.7cecce51.js.map  app.7d6103e9.js  app.7d6103e9.js.map  app.a7ff0a4f.js  app.a7ff0a4f.js.map  app.c822f896.js  app.c822f896.js.map  app.e7a8b0bd.js  app.e7a8b0bd.js.map  app.ef469aa5.js  app.ef469aa5.js.map  app.f0e7ffcf.js  app.f0e7ffcf.js.map  app.f1483a83.js  app.f1483a83.js.map  chunk-vendors.015b7e99.js  chunk-vendors.015b7e99.js.map  chunk-vendors.01fd7bd0.js  chunk-vendors.01fd7bd0.js.map  chunk-vendors.4c1c424a.js  chunk-vendors.4c1c424a.js.map  chunk-vendors.b1d4bf3f.js  chunk-vendors.b1d4bf3f.js.map
