[package]
name = "fisha-token"
version = "0.1.0"
authors = ["iouastamora@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "3.1.0"
near-contract-standards = "3.2.0"
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
near-primitives = "0.12.0"

